exports[`invalid(1): {} 1`] = `

[Input]
  1 | {}

`;

exports[`invalid(1): {} 2`] = `

Message:
> 1 | {}
    | ^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true}

`;

exports[`invalid(10): {\n} 1`] = `

[Input]
  1 | {
  2 | }

`;

exports[`invalid(10): {\n} 2`] = `

Message:
> 1 | {
    | ^
> 2 | }
    | ^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"private": true
  3 | }

`;

exports[`invalid(11): {\"dependencies\": {\n\t\"foo\": \"1.0.0\"\n}} 1`] = `

[Input]
  1 | {"dependencies": {
  2 | 	"foo": "1.0.0"
  3 | }}

`;

exports[`invalid(11): {\"dependencies\": {\n\t\"foo\": \"1.0.0\"\n}} 2`] = `

Message:
> 1 | {"dependencies": {
    | ^^^^^^^^^^^^^^^^^^
> 2 | 	"foo": "1.0.0"
    | ^^^^^^^^^^^^^^^
> 3 | }}
    | ^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"dependencies": {
  2 | 	"foo": "1.0.0"
  3 | }, "private": true}

`;

exports[`invalid(12): {\"name\": \"foo\",\n\t\"version\": \"1.0.0\"} 1`] = `

[Input]
  1 | {"name": "foo",
  2 | 	"version": "1.0.0"}

`;

exports[`invalid(12): {\"name\": \"foo\",\n\t\"version\": \"1.0.0\"} 2`] = `

Message:
> 1 | {"name": "foo",
    | ^^^^^^^^^^^^^^^
> 2 | 	"version": "1.0.0"}
    | ^^^^^^^^^^^^^^^^^^^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"name": "foo",
  2 | 	"version": "1.0.0",
  3 | 	"private": true}

`;

exports[`invalid(13): {\n\t\t\t\"name\": \"foo\",\n\t\t\t\"version\": \"1.0.0\"\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"name": "foo",
  3 | 			"version": "1.0.0"
  4 | 		}

`;

exports[`invalid(13): {\n\t\t\t\"name\": \"foo\",\n\t\t\t\"version\": \"1.0.0\"\n\t\t} 2`] = `

Message:
> 1 | {
    | ^
> 2 | 			"name": "foo",
    | ^^^^^^^^^^^^^^^^^
> 3 | 			"version": "1.0.0"
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | 		}
    | ^^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 			"name": "foo",
  3 | 			"version": "1.0.0",
  4 | 			"private": true
  5 | 		}

`;

exports[`invalid(14): {\r\n\t\"name\": \"foo\"\r\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo"
  3 | }

`;

exports[`invalid(14): {\r\n\t\"name\": \"foo\"\r\n} 2`] = `

Message:
> 1 | {
    | ^
> 2 | 	"name": "foo"
    | ^^^^^^^^^^^^^^
> 3 | }
    | ^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": true
  4 | }

`;

exports[`invalid(2): {\"name\": \"foo\"} 1`] = `

[Input]
  1 | {"name": "foo"}

`;

exports[`invalid(2): {\"name\": \"foo\"} 2`] = `

Message:
> 1 | {"name": "foo"}
    | ^^^^^^^^^^^^^^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"name": "foo", "private": true}

`;

exports[`invalid(3): {\"private\": false} 1`] = `

[Input]
  1 | {"private": false}

`;

exports[`invalid(3): {\"private\": false} 2`] = `

Message:
> 1 | {"private": false}
    |             ^^^^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true}

`;

exports[`invalid(4): {\"private\": \"true\"} 1`] = `

[Input]
  1 | {"private": "true"}

`;

exports[`invalid(4): {\"private\": \"true\"} 2`] = `

Message:
> 1 | {"private": "true"}
    |             ^^^^^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true}

`;

exports[`invalid(5): {\"private\": 1} 1`] = `

[Input]
  1 | {"private": 1}

`;

exports[`invalid(5): {\"private\": 1} 2`] = `

Message:
> 1 | {"private": 1}
    |             ^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true}

`;

exports[`invalid(6): {\"private\": null} 1`] = `

[Input]
  1 | {"private": null}

`;

exports[`invalid(6): {\"private\": null} 2`] = `

Message:
> 1 | {"private": null}
    |             ^^^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true}

`;

exports[`invalid(7): {\"private\": []} 1`] = `

[Input]
  1 | {"private": []}

`;

exports[`invalid(7): {\"private\": []} 2`] = `

Message:
> 1 | {"private": []}
    |             ^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true}

`;

exports[`invalid(8): {\"private\": {}} 1`] = `

[Input]
  1 | {"private": {}}

`;

exports[`invalid(8): {\"private\": {}} 2`] = `

Message:
> 1 | {"private": {}}
    |             ^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true}

`;

exports[`invalid(9): {\"private\": true, \"private\": false} 1`] = `

[Input]
  1 | {"private": true, "private": false}

`;

exports[`invalid(9): {\"private\": true, \"private\": false} 2`] = `

Message:
> 1 | {"private": true, "private": false}
    |                              ^^^^^ The package must set \`"private": true\`.

Suggestion 1/1: Set \`"private": true\`.:
  1 | {"private": true, "private": true}

`;
